<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/toolbar"
        ></include>
    <TextView
        android:text="@string/registrar_nuevo_paciente"
        android:textAlignment="center"
        android:textSize="@dimen/tamaño_Letra"
        android:textColor="@color/colorGreen"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_botton"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/rut_del_paciente"
            android:textSize="@dimen/tamaño_Letra"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/rut_registrar"
            android:inputType="text"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/nombre"
            android:textSize="@dimen/tamaño_Letra"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/nombre_registrar"
            android:inputType="text"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/apellido"
            android:textSize="@dimen/tamaño_Letra"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/apellido_registrar"
            android:inputType="text"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/fecha_de_examen"
            android:textSize="@dimen/tamaño_Letra"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/date_registrar"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/area_de_trabajo"
            android:textSize="@dimen/tamaño_Letra"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <Spinner
            android:id="@+id/area_registrar"
            android:entries="@array/area_trabajo"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/presenta_sistomas"
            android:textSize="@dimen/sistomas_size"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <Switch
            android:id="@+id/sistomas_registrar"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Switch>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/temperatura"
            android:textSize="@dimen/tamaño_Letra"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/temperatura_registrar"
            android:inputType="numberDecimal"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/presenta_tos"
            android:textSize="@dimen/tamaño_Letra"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <Switch
            android:id="@+id/tos_registrar"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Switch>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/presi_n_arterial"
            android:textSize="@dimen/tamaño_Letra"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/presion_arterial_registrar"
            android:inputType="number"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <Button
        android:id="@+id/registrarBtn"
        android:text="@string/registrar_paciente"
        android:background="@color/colorAccent"
        android:textColor="@color/primary_light"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/button_120"
        android:layout_marginEnd="@dimen/button_120"
        android:layout_marginBottom="@dimen/margin_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>
</LinearLayout>